// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphHelpers should consistently calculate totals: totals 1`] = `
Object {
  "instancesOpenshift": undefined,
  "instancesRhel": undefined,
  "openshiftMemoryTime": null,
  "openshiftRuntimeTime": 3,
  "openshiftVcpuTime": null,
  "rhelMemoryTime": null,
  "rhelRuntimeTime": 26,
  "rhelVcpuTime": null,
}
`;

exports[`GraphHelpers should consistently convert data: converted 1`] = `
Object {
  "openshiftInstances": Object {
    "colors": Object {
      "openshiftInstances": "#39a5dc",
    },
    "columns": Array [
      Array [
        "x",
        "Invalid date",
        "Invalid date",
        "Invalid date",
        "Invalid date",
        "Invalid date",
        "Invalid date",
      ],
      Array [
        "openshiftInstances",
        0,
        0,
        0,
        1,
        0,
        0,
      ],
    ],
    "names": Object {
      "openshiftInstances": "RHOCP Instances",
    },
  },
  "openshiftMemoryTime": Object {
    "colors": Object {
      "openshiftMemoryTime": "#39a5dc",
    },
    "columns": Array [
      Array [
        "x",
        "Invalid date",
        "Invalid date",
        "Invalid date",
        "Invalid date",
        "Invalid date",
        "Invalid date",
      ],
      Array [
        "openshiftMemoryTime",
        null,
        null,
        null,
        null,
        null,
        null,
      ],
    ],
    "names": Object {
      "openshiftMemoryTime": "RHOCP GB Memory Hours",
    },
  },
  "openshiftRuntimeTime": Object {
    "colors": Object {
      "openshiftRuntimeTime": "#39a5dc",
    },
    "columns": Array [
      Array [
        "x",
        "Invalid date",
        "Invalid date",
        "Invalid date",
        "Invalid date",
        "Invalid date",
        "Invalid date",
      ],
      Array [
        "openshiftRuntimeTime",
        0,
        0,
        0,
        3,
        0,
        0,
      ],
    ],
    "names": Object {
      "openshiftRuntimeTime": "RHOCP Instance Hours",
    },
  },
  "openshiftVcpuTime": Object {
    "colors": Object {
      "openshiftVcpuTime": "#39a5dc",
    },
    "columns": Array [
      Array [
        "x",
        "Invalid date",
        "Invalid date",
        "Invalid date",
        "Invalid date",
        "Invalid date",
        "Invalid date",
      ],
      Array [
        "openshiftVcpuTime",
        null,
        null,
        null,
        null,
        null,
        null,
      ],
    ],
    "names": Object {
      "openshiftVcpuTime": "RHOCP Core Hours",
    },
  },
  "rhelInstances": Object {
    "colors": Object {
      "rhelInstances": "#ec7a08",
    },
    "columns": Array [
      Array [
        "x",
        "Invalid date",
        "Invalid date",
        "Invalid date",
        "Invalid date",
        "Invalid date",
        "Invalid date",
      ],
      Array [
        "rhelInstances",
        1,
        1,
        2,
        2,
        2,
        2,
      ],
    ],
    "names": Object {
      "rhelInstances": "RHEL Instances",
    },
  },
  "rhelMemoryTime": Object {
    "colors": Object {
      "rhelMemoryTime": "#ec7a08",
    },
    "columns": Array [
      Array [
        "x",
        "Invalid date",
        "Invalid date",
        "Invalid date",
        "Invalid date",
        "Invalid date",
        "Invalid date",
      ],
      Array [
        "rhelMemoryTime",
        null,
        null,
        null,
        null,
        null,
        null,
      ],
    ],
    "names": Object {
      "rhelMemoryTime": "RHEL GB Memory Hours",
    },
  },
  "rhelRuntimeTime": Object {
    "colors": Object {
      "rhelRuntimeTime": "#ec7a08",
    },
    "columns": Array [
      Array [
        "x",
        "Invalid date",
        "Invalid date",
        "Invalid date",
        "Invalid date",
        "Invalid date",
        "Invalid date",
      ],
      Array [
        "rhelRuntimeTime",
        15,
        1,
        3,
        3,
        3,
        3,
      ],
    ],
    "names": Object {
      "rhelRuntimeTime": "RHEL Instance Hours",
    },
  },
  "rhelVcpuTime": Object {
    "colors": Object {
      "rhelVcpuTime": "#ec7a08",
    },
    "columns": Array [
      Array [
        "x",
        "Invalid date",
        "Invalid date",
        "Invalid date",
        "Invalid date",
        "Invalid date",
        "Invalid date",
      ],
      Array [
        "rhelVcpuTime",
        null,
        null,
        null,
        null,
        null,
        null,
      ],
    ],
    "names": Object {
      "rhelVcpuTime": "RHEL Core Hours",
    },
  },
  "tooltips": Object {
    "format": Object {
      "title": [Function],
    },
    "tooltip": Object {
      "grouped": false,
    },
  },
}
`;

exports[`GraphHelpers should have a specific convertGraphData methods for tooltip titles: tooltip title 1`] = `"Data Lorem Ipsum"`;

exports[`GraphHelpers should have defined methods: calculateGraphTotals keys 1`] = `
Array [
  "instancesOpenshift",
  "instancesRhel",
  "openshiftMemoryTime",
  "openshiftRuntimeTime",
  "openshiftVcpuTime",
  "rhelMemoryTime",
  "rhelRuntimeTime",
  "rhelVcpuTime",
]
`;

exports[`GraphHelpers should have defined methods: convertGraphData keys 1`] = `
Array [
  "openshiftInstances",
  "rhelInstances",
  "openshiftMemoryTime",
  "openshiftRuntimeTime",
  "openshiftVcpuTime",
  "rhelMemoryTime",
  "rhelRuntimeTime",
  "rhelVcpuTime",
  "tooltips",
]
`;
